# GIF87a

./: GIF87a-encoder.hs  GIF87a-parser.hs  GIF87a-test.hs  GIF87a-transformer.hs  GIF87a.cabal  GIF87a.hs  README
GIF87a/: Encoder.hs  Image.hs  LZW.hs  Parser.hs  Transformations.hs
test/: black.gif87  mozilla-3bit.gif87  mozilla-4bit.gif87  mozilla-5bit.gif87  mozilla-6bit.gif87  mozilla-7bit.gif87  mozilla-banner.gif87  mozilla-grayscale.gif87  space-3bit.gif87  space-4bit.gif87  space-5bit.gif87  space-6bit.gif87  space-7bit.gif87  space-8bit.gif87  space-grayscale.gif87
test/GIF87a/Encoder/: Tests.hs
test/GIF87a/LZW/: Tests.hs
