Name:                GIF87a
Version:             0.0
Description:         A simple GIF87a parser
License:             GPL
License-file:        LICENSE
Author:              Pieter De Baets
Maintainer:          Pieter.DeBaets@UGent.be
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  Exposed-Modules:   GIF87a.Image,
                     GIF87a.Parser,
                     GIF87a.Encoder,
                     GIF87a.Transformations
  Build-Depends:     attoparsec >= 0.9 && < 0.10,
                     bytestring >= 0.9 && < 0.10,
                     binary-strict >= 0.4 && < 0.5,
                     containers >= 0.4 && < 0.5

Executable gif-parser
  Build-Depends:     base >= 3 && < 5
  Main-is:           GIF87a-parser.hs

Executable gif-encoder
  Build-Depends:     base >= 3 && < 5
  Main-is:           GIF87a-encoder.hs
