Name:                GIF87a
Version:             0.1
Description:         A simple GIF87a parser
License:             GPL
License-file:        LICENSE
Author:              Pieter De Baets
Maintainer:          Pieter.DeBaets@UGent.be
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  Exposed-Modules:   GIF87a.Image,
                     GIF87a.Parser,
                     GIF87a.Encoder,
                     GIF87a.Transformations
  Build-Depends:     attoparsec >= 0.9 && < 0.10,
                     bytestring >= 0.9 && < 0.10,
                     binary >= 0.5 && < 0.6,
                     binary-strict >= 0.4 && < 0.5,
                     cmdargs >= 0.9 && < 0.10,
                     containers >= 0.4 && < 0.5

Executable gif87a
  Build-Depends:     base >= 3 && < 5
  Main-is:           GIF87a.hs
